# wenfire

./: .funcignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  azure.yaml  belasting-nederland.ipynb  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: pytest.yml  python-check.yaml
tests/: conftest.py  test_app.py
wenfire/: .coverage  __init__.py  app.py  coverage.xml  fire.py  plots.py
wenfire/static/: styles.css  utils.js
wenfire/templates/: index.html  index.html.jinja2  parameter_change.html.jinja2  parameter_row.html.jinja2  results_partial.html  results_partial.html.jinja2
