[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wenfire"
version = "0.1.0"
description = "WenFire 🔥 Financial Independence Calculator 💸"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.4.1",
    "fastapi-htmx>=0.4.4",
    "fastapi[all]>=0.115.0",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.12",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.setuptools.packages.find]
include = ["wenfire.*", "wenfire"]
