[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "wenfire"
dynamic = ["version"]
description = "WenFire 🔥 Financial Independence Calculator 💸"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.4.1",
    "fastapi-htmx>=0.4.4",
    "fastapi[all]>=0.115.0",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "pre-commit-uv>=4.1.4",
    "pre-commit>=4.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "wenfire/_version.py"

[tool.pytest.ini_options]
addopts = """
    --cov=wenfire
    --cov-report term
    --cov-report html
    --cov-report xml
    -W error
    -vvv
"""
